# dyresearch

./: .gitignore  Dockerfile  README.md  desktop_build.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/: __init__.py  server.py
app/routers/: __init__.py  chat.py  documents.py  health.py  settings.py
app/settings/: config_manager.py
dyresearch/: agent.py  config.py
dyresearch-sidecar/: esbuild.config.mjs  main.js  main.ts  manifest.json  package-lock.json  package.json  styles.css
dyresearch/agents/: __init__.py  librarian.py  notetaker.py  professor.py  researcher.py
dyresearch/app/: __init__.py  server.py
dyresearch/app/models/: request_chat.py  request_rename_session.py  response_chat.py  session_info.py
dyresearch/app/routers/: chat.py  documents.py  health.py  settings.py
dyresearch/app/settings/: config_manager.py
dyresearch/callbacks/: __init__.py  documents.py  init_state.py  notes.py
dyresearch/core/: __init__.py  agent.py
dyresearch/core/agents/: librarian.py  notetaker.py  professor.py  researcher.py
dyresearch/core/callbacks/: notes.py
dyresearch/core/entities/: knowledge_chunk.py
dyresearch/core/factory/: runner.py
dyresearch/core/sessions/: memory.py
dyresearch/core/tools/: library.py  notes.py  search.py  teaching.py
dyresearch/entities/: __init__.py  knowledge_chunk.py
dyresearch/factory/: database.py  embeddings.py  llm_providers.py  runner.py
dyresearch/sessions/: memory.py
dyresearch/tools/: library.py  notes.py  rag_tools.py  search.py  search_tools.py  teaching.py
(+10 files in other folders)
