[project]
name = "dyresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "google-adk>=1.23.0",
    "litellm>=1.81.3",
    "lxml>=6.0.2",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.1",
    "sentence-transformers>=5.3.0",
]
