[build-system]
requires = ["hatchling"] # or setuptools/poetry
build-backend = "hatchling.build"

[project]
name = "dyresearch"
version = "0.1.0"
description = "Agentic Study System able to interact with your Knowledge Base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.12.0",
    "docling>=2.84.0",
    "google-adk>=1.28.0",
    "greenlet>=3.3.2",
    "lancedb>=0.30.2",
    "langchain-text-splitters>=1.1.1",
    "litellm>=1.83.0",
    "lxml>=6.0.2",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.1",
    "pyinstaller>=6.19.0",
    "sentence-transformers>=5.3.0",
]
